plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.1'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'checkstyle'
	id 'jacoco'
}

group = 'com.commigo.metaclass'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

apply plugin: 'checkstyle'
checkstyle {
	toolVersion = '6.4.1'
	sourceSets = [sourceSets.main]
	configFile = rootProject.file("config/checkstyle/google_checks.xml")
	showViolations = true
	ignoreFailures = true
}
checkstyleTest {
	enabled = false
}
tasks.withType(Checkstyle) {
	reports {
		html.destination rootProject.file("config/checkstyle/checkstyle.html")
	}
}



dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'mysql:mysql-connector-java:8.0.28'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
	implementation 'org.projectlombok:lombok:1.18.30'
	implementation 'com.google.code.gson:gson:2.8.9'
	implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0'
	implementation 'com.auth0:java-jwt:3.18.1'
	implementation 'org.pmml4s:pmml4s_2.12:0.9.12'
	implementation 'org.apache.commons:commons-csv:1.8'
	testImplementation 'junit:junit:4.13.1'
	testImplementation 'junit:junit:4.13.1'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'
	implementation 'org.hibernate:hibernate-validator:7.0.2.Final'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

processResources {
	filesMatching('**/application.properties') {
		expand(project.properties)
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
